<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">服务管理器</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="ftp_service">FTP 服务器</string>
    <string name="tcp_repeater">TCP 转发器</string>
    <string name="http_service">HTTP 服务器</string>
    <string name="tcp_dd_service">TCP_DD 服务器</string>
    <string name="web_proxy_service">Web 代理服务器</string>
    <string name="running">正在运行</string>
    <string name="stopped">已停止运行</string>
    <string name="port_setting">端口号设置</string>
    <string name="port">端口号</string>
    <string name="start_service">启动服务</string>
    <string name="close_service">关闭服务</string>
    <string name="service_connected">已连接到服务</string>
    <string name="service_disconnected">已断开服务</string>
    <string name="local_ip_address">本机IP地址</string>
    <string name="unknown">未知</string>
    <string name="desktop_float_timer">桌面悬浮时钟</string>
    <string name="cavan_red_packet_notify">曹福昂红包提醒</string>
    <string name="red_packet_notify">红包提醒</string>
    <string name="red_packet_notify_test">红包提醒测试</string>
    <string name="red_packet_notify_ringtone">红包提示音</string>
    <string name="permission_settings">权限设置</string>
    <string name="test">测试</string>
    <string name="copy">复制</string>
    <string name="filter">筛选</string>
    <string name="filter_none">不筛选</string>
    <string name="message_count">消息总数：<xliff:g>%1$d</xliff:g></string>
    <string name="message_show">查看消息</string>
    <string name="message_clean">清空消息</string>
    <string name="message_find">筛选消息</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    <string name="protected_apps">受保护后台应用</string>
    <string name="notification_manager">通知管理中心</string>
    <string name="notification_access">通知读取权限</string>
    <string name="accessibility_settings">辅助功能设置</string>
    <string name="permission_manager">权限管理</string>
    <string name="cavan_input_method">曹福昂输入法</string>
    <string name="input_method_select">输入法选择</string>
    <string name="commit_ahead">提前提交</string>
    <string name="auto_unlock">自动解锁</string>
    <string name="auto_commit">自动提交</string>
    <string name="auto_unpack">自动拆开</string>
    <string name="listen_click">监听点击</string>
    <string name="auto_open_app">自动打开应用</string>
    <string name="auto_commit_after"><xliff:g>%1$d</xliff:g> 秒后自动提交</string>
    <string name="complete_code">已完成口令：<xliff:g>%1$s</xliff:g></string>
    <string name="ignore_invalid_code">忽略非法的口令：<xliff:g>%1$s</xliff:g></string>
    <string name="ignore_shared_code">忽略已分享的口令：<xliff:g>%1$s</xliff:g></string>
    <string name="ignore_received_code">忽略已接收的口令：<xliff:g>%1$s</xliff:g></string>
    <string name="ignore_completed_code">忽略已完成的口令：<xliff:g>%1$s</xliff:g></string>
    <string name="connecting">正在连接</string>
    <string name="connected">已连接</string>
    <string name="disconnected">已断开连接</string>
    <string name="listen_clip">监听剪切板</string>
    <string name="lan_share">内网分享</string>
    <string name="lan_test">内网测试</string>
    <string name="wan_share">外网分享</string>
    <string name="wan_receive">外网接收</string>
    <string name="wan_test">外网测试</string>
    <string name="wan_server">外网服务器</string>
    <string name="wan_connecting">正在连接到外网服务器</string>
    <string name="wan_connected">已连接到外网服务器</string>
    <string name="wan_disconnected">外网服务器已断开连接</string>
    <string name="network_test_success">网络测试成功：<xliff:g>%1$s</xliff:g></string>
    <string name="tcp_bridge">TCP 桥接器</string>
    <string name="tcp_bridge_setting">TCP 桥接器设置</string>
    <string name="tcp_bridge_running">TCP 桥接器正在运行</string>
    <string name="tcp_bridge_stopped">TCP 桥接器已停止运行</string>
    <string name="tcp_bridge_exit">TCP 桥接器已退出</string>
    <string name="exit">已退出</string>
    <string name="completed_please_manual_commit">已完成的口令，请手动提交</string>
    <string name="ime_fault_please_manual_commit">没有切换输入法，请手动提交</string>
    <string name="commit_too_much_please_manual_commit">提交次数过多，请手动提交</string>
    <string name="auto_commit_not_enable_please_manual_commit">自动提交没有打开，请手动提交</string>
    <string name="auto_commit_count">提交次数：<xliff:g>%1$s</xliff:g></string>
    <string name="test_success">测试成功</string>
    <string name="send">发送</string>
    <string name="recognize">识别</string>
    <string name="split">拆分</string>
    <string name="already_clear">已清空</string>
    <string name="red_packet_code_send">红包口令发送</string>
    <string name="red_packet_code_recognize">红包口令识别</string>
    <string name="red_packet_code_split">红包口令拆分</string>
    <string name="red_packet_code_clear">红包口令清空</string>
    <string name="as_code">每行一条完整的口令</string>
    <string name="secret_order">密令</string>
    <string name="secret_order_received">收到密令：<xliff:g>%1$s</xliff:g></string>
    <string name="extract">提取</string>
    <string name="clipboard_updated">剪切板更新：<xliff:g>%1$s</xliff:g></string>
    <string name="red_packet_code_updated">口令更新：<xliff:g>%1$s</xliff:g></string>
    <string name="auto_open_alipay">自动打开支付宝</string>
    <string name="red_packet_notify_setting">红包提醒设置</string>
    <string-array name="auto_entries">
        <item>关闭</item>
        <item>提交1次</item>
        <item>提交2次</item>
        <item>提交3次</item>
        <item>提交4次</item>
        <item>提交5次</item>
        <item>提交6次</item>
        <item>提交7次</item>
        <item>提交8次</item>
        <item>提交9次</item>
    </string-array>
    <string-array name="auto_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="ahead_entries">
        <item>准点</item>
        <item>提前100毫秒</item>
        <item>提前200毫秒</item>
        <item>提前300毫秒</item>
        <item>提前400毫秒</item>
        <item>提前500毫秒</item>
        <item>提前600毫秒</item>
        <item>提前700毫秒</item>
        <item>提前800毫秒</item>
        <item>提前900毫秒</item>
        <item>提前1000毫秒</item>
        <item>提前1100毫秒</item>
        <item>提前1200毫秒</item>
        <item>提前1300毫秒</item>
        <item>提前1400毫秒</item>
        <item>提前1500毫秒</item>
        <item>提前1600毫秒</item>
        <item>提前1700毫秒</item>
        <item>提前1800毫秒</item>
        <item>提前1900毫秒</item>
        <item>提前2000毫秒</item>
        <item>提前2100毫秒</item>
        <item>提前2200毫秒</item>
        <item>提前2300毫秒</item>
        <item>提前2400毫秒</item>
        <item>提前2500毫秒</item>
        <item>提前2600毫秒</item>
        <item>提前2700毫秒</item>
        <item>提前2800毫秒</item>
        <item>提前2900毫秒</item>
        <item>提前3000毫秒</item>
        <item>提前3100毫秒</item>
        <item>提前3200毫秒</item>
        <item>提前3300毫秒</item>
        <item>提前3400毫秒</item>
        <item>提前3500毫秒</item>
        <item>提前3600毫秒</item>
        <item>提前3700毫秒</item>
        <item>提前3800毫秒</item>
        <item>提前3900毫秒</item>
        <item>提前4000毫秒</item>
        <item>提前4100毫秒</item>
        <item>提前4200毫秒</item>
        <item>提前4300毫秒</item>
        <item>提前4400毫秒</item>
        <item>提前4500毫秒</item>
        <item>提前4600毫秒</item>
        <item>提前4700毫秒</item>
        <item>提前4800毫秒</item>
        <item>提前4900毫秒</item>
        <item>提前5000毫秒</item>
        <item>延迟100毫秒</item>
        <item>延迟200毫秒</item>
        <item>延迟300毫秒</item>
        <item>延迟400毫秒</item>
        <item>延迟500毫秒</item>
        <item>延迟600毫秒</item>
        <item>延迟700毫秒</item>
        <item>延迟800毫秒</item>
        <item>延迟900毫秒</item>
        <item>延迟1000毫秒</item>
        <item>延迟1100毫秒</item>
        <item>延迟1200毫秒</item>
        <item>延迟1300毫秒</item>
        <item>延迟1400毫秒</item>
        <item>延迟1500毫秒</item>
        <item>延迟1600毫秒</item>
        <item>延迟1700毫秒</item>
        <item>延迟1800毫秒</item>
        <item>延迟1900毫秒</item>
        <item>延迟2000毫秒</item>
        <item>延迟2100毫秒</item>
        <item>延迟2200毫秒</item>
        <item>延迟2300毫秒</item>
        <item>延迟2400毫秒</item>
        <item>延迟2500毫秒</item>
        <item>延迟2600毫秒</item>
        <item>延迟2700毫秒</item>
        <item>延迟2800毫秒</item>
        <item>延迟2900毫秒</item>
        <item>延迟3000毫秒</item>
        <item>延迟3100毫秒</item>
        <item>延迟3200毫秒</item>
        <item>延迟3300毫秒</item>
        <item>延迟3400毫秒</item>
        <item>延迟3500毫秒</item>
        <item>延迟3600毫秒</item>
        <item>延迟3700毫秒</item>
        <item>延迟3800毫秒</item>
        <item>延迟3900毫秒</item>
        <item>延迟4000毫秒</item>
        <item>延迟4100毫秒</item>
        <item>延迟4200毫秒</item>
        <item>延迟4300毫秒</item>
        <item>延迟4400毫秒</item>
        <item>延迟4500毫秒</item>
        <item>延迟4600毫秒</item>
        <item>延迟4700毫秒</item>
        <item>延迟4800毫秒</item>
        <item>延迟4900毫秒</item>
        <item>延迟5000毫秒</item>
    </string-array>
    <string name="disable_keyguard">禁止锁屏</string>
    <string name="qq_auto_unpack">QQ自动抢</string>
    <string name="qq_filter">QQ过滤</string>
    <string name="mm_auto_unpack">微信自动抢</string>
    <string name="mm_filter">微信过滤</string>
    <string name="auto_switch_ime">自动切换输入法</string>
    <string name="keyword_notify">关键字提醒</string>
    <string name="auto_back_desktop">自动返回桌面</string>
    <string name="app_name_apk_backup">应用备份</string>
    <string name="backup_system_app">备份系统应用</string>
    <string name="clear_before_backup">备份前先清除</string>
    <string name="app_name_radix_converter">进制转换器</string>
    <string name="app_name_resistor_decoder">电阻解码器</string>
	<string name="clipboard_share">剪切板分享</string>
	<string name="fu_dai_notify">福袋提醒</string>
	<string name="disable_suspend">禁止休眠</string>
	<string name="red_packet_edit">红包口令编辑</string>
	<string name="update">更新</string>
	<string name="ignore">忽略</string>
	<string name="refresh">刷新</string>
	<string name="sync">同步</string>
	<string name="qrcode_generate">生成二维码</string>
	<string name="qrcode_scan">扫描二维码</string>
	<string name="text_search">文字查找</string>
	<string name="wifi_detector">WiFi探测器</string>
	<string name="show_wifi_password">WiFi密码查看</string>
	<string name="share_app">应用分享</string>
	<string name="name">姓名</string>
	<string name="phone">电话</string>
	<string name="on_time_notify">整点提醒</string>
	<string name="thanks_notify">大水提醒</string>
	<string name="thanks_share">大水分享</string>
	<string name="show_location">位置查看</string>
	<string name="mock_location">位置模拟</string>
	<string name="mock_location_service">虚拟定位服务</string>
	<string name="repeat_send_delay">重复发送延迟</string>
	<string name="label_account">账号：</string>
	<string name="label_password">密码：</string>
	<string name="account_manage">账号管理</string>
	<string name="ssid">热点名称：</string>
	<string name="encry_mode">加密方式：</string>
	<string name="password">密码：</string>
	<string name="cancel">取消</string>
</resources>