<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:key="parent">

	<Preference android:key="share_app"
	    android:title="@string/share_app" />

	<Preference android:key="ip_address"
	    android:title="@string/local_ip_address"
	    android:summary="@string/unknown" />

	<com.cavan.cavanjni.TcpRepeaterPreference android:key="tcp_repeater"
	    android:persistent="true"
	    android:title="@string/tcp_repeater" />

	<com.cavan.cavanjni.FtpServicePreference android:key="ftp"
	    android:persistent="true"
	    android:title="@string/ftp_service" />

	<com.cavan.cavanjni.HttpServicePreference android:key="http"
	    android:persistent="true"
	    android:title="@string/http_service" />

	<com.cavan.cavanjni.TcpDdServicePreference android:key="tcp_dd"
	    android:persistent="true"
	    android:title="@string/tcp_dd_service" />

	<com.cavan.cavanjni.WebProxyServicePreference android:key="web_proxy"
	    android:persistent="true"
	    android:title="@string/web_proxy_service" />

	<com.cavan.cavanjni.MockLocationServicePreference android:key="mock_location"
	    android:persistent="true"
	    android:title="@string/mock_location_service" />

</PreferenceScreen>
