<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/listViewCodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/timePicker" >
    </ListView>

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timePicker"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextCode" />

    <CheckBox
        android:id="@+id/checkBoxIgnore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePicker"
        android:layout_toRightOf="@+id/listViewCodes"
        android:text="@string/ignore" />

    <Button
        android:id="@+id/buttonReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxIgnore"
        android:layout_toRightOf="@+id/listViewCodes"
        android:text="@string/refresh" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonReload"
        android:layout_alignBottom="@+id/buttonReload"
        android:layout_alignParentRight="true"
        android:text="@string/update" />

    <CheckBox
        android:id="@+id/checkBoxSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/checkBoxIgnore"
        android:checked="true"
        android:text="@string/sync" />

</RelativeLayout>
