<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/listViewUsers"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextPassword"
            android:layout_alignParentLeft="true"
            android:text="@string/label_password" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextUserName"
            android:layout_alignParentLeft="true"
            android:text="@string/label_account" />

        <com.cavan.android.CavanCheckBox
            android:id="@+id/checkBoxSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignBaseline="@+id/spinnerPackage"
            android:text="@string/select_all" />

        <Spinner
            android:id="@+id/spinnerPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/spinnerPackage"
            android:ems="10" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editTextUserName"
            android:ems="10" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editTextPassword"
            android:layout_marginTop="20dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/buttonRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonAdd"
            android:layout_alignBottom="@+id/buttonAdd"
            android:layout_alignParentLeft="true"
            android:text="@string/remove" />

    </RelativeLayout>

</LinearLayout>